@@ -1502,6 +1502,7 @@ static CMD_FUNC(cmd_account)
     struct userNode *user;
     struct server *server;
     struct handle_info *hi;
+	extern struct nickserv_config nickserv_conf;
 
     if ((argc < 3) || !origin || !(server = GetServerH(origin)))
         return 0; /* Origin must be server. */
@@ -1521,7 +1522,11 @@ static CMD_FUNC(cmd_account)
             /* Return a AC A */
             putsock("%s " P10_ACCOUNT " %s A %s "FMT_TIME_T, self->numeric, server->numeric , argv[3], hi->registered);
 
-        }
+			log_module(MAIN_LOG, LOG_DEBUG, "loc_auth: %s\n", user->nick);
+
+			if (nickserv_conf.auto_oper[0] && hi->opserv_level > 0)
+				putsock("%s " P10_MODE " %s %s ", self->numeric, argv[4], nickserv_conf.auto_oper);
+         }
         else
         {
             /* Return a AC D */
@@ -1536,6 +1541,8 @@ static CMD_FUNC(cmd_account)
             /* Return a AC A */
             putsock("%s " P10_ACCOUNT " %s A %s "FMT_TIME_T, self->numeric, server->numeric , argv[3], hi->registered);
 
+			if (nickserv_conf.auto_oper[0] && hi->opserv_level > 0)
+				putsock("%s " P10_MODE " %s %s ", self->numeric, argv[5], nickserv_conf.auto_oper);
         }
         else
         {
